// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavTabs does not require history 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-NavTabs)>
        <inject-NavTabs classes={{...}}>
          <NavTabs classes={{...}} tabs={{...}} history={{...}} elevation={2}>
            <WithStyles(Paper) className="RSFNavTabs-root-518" elevation={2}>
              <Paper className="RSFNavTabs-root-518" elevation={2} classes={{...}} component="div" square={false}>
                <div className="MuiPaper-root-522 MuiPaper-elevation2-526 MuiPaper-rounded-523 RSFNavTabs-root-518">
                  <WithStyles(inject-TabsRow-with-app) initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                    <inject-TabsRow-with-app initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                      <TabsRow initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}} app={{...}} variant="scrollable" orientation="horizontal">
                        <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-552 RSFNavTabs-tabs-517" classes={{...}}>
                          <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-552 RSFNavTabs-tabs-517" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                            <div className="MuiTabs-root-560 RSFTabsRow-root-552 RSFNavTabs-tabs-517 RSFTabsRow-root-552 RSFNavTabs-tabs-517" variant="scrollable">
                              <EventListener target="window" onResize={[Function: debounced]} />
                              <div className="MuiTabs-flexContainer-561 RSFTabsRow-centered-558">
                                <div className="MuiTabs-scroller-563 RSFTabsRow-scroller-556 MuiTabs-fixed-564" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                                  <div className="MuiTabs-flexContainer-561 RSFTabsRow-centered-558">
                                    <WithStyles(NavTab) text="Tab 1" url="/1" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} classes={{...}} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={0}>
                                      <NavTab text="Tab 1" url="/1" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <div className="RSFNavTab-tabWrapper-575" onClick={[Function]}>
                                              <WithStyles(inject-Link) state={[Function]} className="RSFNavTab-link-572" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}}>
                                                <inject-Link state={[Function]} className="RSFNavTab-link-572" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                  <Link state={[Function]} className="RSFNavTab-link-572" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                    <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="nav" data-moov-link="on" className="RSFLink-root-577 RSFNavTab-link-572" style={[undefined]} onClick={[Function]} href="https://example.com/1">
                                                      <WithStyles(Tab) className="RSFNavTab-root-569 RSFTabsRow-tab-553 RSFNavTabs-tab-521" label="Tab 1" classes={{...}}>
                                                        <Tab className="RSFNavTab-root-569 RSFTabsRow-tab-553 RSFNavTabs-tab-521" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-578 MuiTab-textColorInherit-580 RSFNavTab-root-569 RSFTabsRow-tab-553 RSFNavTabs-tab-521" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                            <ButtonBase focusRipple={true} className="MuiTab-root-578 MuiTab-textColorInherit-580 RSFNavTab-root-569 RSFTabsRow-tab-553 RSFNavTabs-tab-521" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                              <button className="MuiButtonBase-root-590 MuiTab-root-578 MuiTab-textColorInherit-580 RSFNavTab-root-569 RSFTabsRow-tab-553 RSFNavTabs-tab-521" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                                <span className="MuiTab-wrapper-586">
                                                                  <span className="MuiTab-labelContainer-587">
                                                                    <span className="MuiTab-label-588 RSFNavTab-label-571">
                                                                      Tab 1
                                                                    </span>
                                                                  </span>
                                                                </span>
                                                                <NoSsr defer={false} fallback={{...}}>
                                                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                    <TouchRipple center={false} classes={{...}}>
                                                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-593" childFactory={[Function: childFactory]}>
                                                                        <span className="MuiTouchRipple-root-593" />
                                                                      </TransitionGroup>
                                                                    </TouchRipple>
                                                                  </WithStyles(TouchRipple)>
                                                                </NoSsr>
                                                              </button>
                                                            </ButtonBase>
                                                          </WithStyles(ButtonBase)>
                                                        </Tab>
                                                      </WithStyles(Tab)>
                                                    </a>
                                                  </Link>
                                                </inject-Link>
                                              </WithStyles(inject-Link)>
                                            </div>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                    <WithStyles(NavTab) text="Tab 1" url="/2" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} classes={{...}} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={1}>
                                      <NavTab text="Tab 1" url="/2" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <div className="RSFNavTab-tabWrapper-575" onClick={[Function]}>
                                              <WithStyles(inject-Link) state={[Function]} className="RSFNavTab-link-572" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}}>
                                                <inject-Link state={[Function]} className="RSFNavTab-link-572" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                  <Link state={[Function]} className="RSFNavTab-link-572" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                    <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="nav" data-moov-link="on" className="RSFLink-root-577 RSFNavTab-link-572" style={[undefined]} onClick={[Function]} href="https://example.com/2">
                                                      <WithStyles(Tab) className="RSFNavTab-root-569 RSFTabsRow-tab-553 RSFNavTabs-tab-521" label="Tab 1" classes={{...}}>
                                                        <Tab className="RSFNavTab-root-569 RSFTabsRow-tab-553 RSFNavTabs-tab-521" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-578 MuiTab-textColorInherit-580 RSFNavTab-root-569 RSFTabsRow-tab-553 RSFNavTabs-tab-521" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                            <ButtonBase focusRipple={true} className="MuiTab-root-578 MuiTab-textColorInherit-580 RSFNavTab-root-569 RSFTabsRow-tab-553 RSFNavTabs-tab-521" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                              <button className="MuiButtonBase-root-590 MuiTab-root-578 MuiTab-textColorInherit-580 RSFNavTab-root-569 RSFTabsRow-tab-553 RSFNavTabs-tab-521" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                                <span className="MuiTab-wrapper-586">
                                                                  <span className="MuiTab-labelContainer-587">
                                                                    <span className="MuiTab-label-588 RSFNavTab-label-571">
                                                                      Tab 1
                                                                    </span>
                                                                  </span>
                                                                </span>
                                                                <NoSsr defer={false} fallback={{...}}>
                                                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                    <TouchRipple center={false} classes={{...}}>
                                                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-593" childFactory={[Function: childFactory]}>
                                                                        <span className="MuiTouchRipple-root-593" />
                                                                      </TransitionGroup>
                                                                    </TouchRipple>
                                                                  </WithStyles(TouchRipple)>
                                                                </NoSsr>
                                                              </button>
                                                            </ButtonBase>
                                                          </WithStyles(ButtonBase)>
                                                        </Tab>
                                                      </WithStyles(Tab)>
                                                    </a>
                                                  </Link>
                                                </inject-Link>
                                              </WithStyles(inject-Link)>
                                            </div>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                  </div>
                                  <WithStyles(TabIndicator) className="MuiTabs-indicator-568 RSFTabsRow-indicator-549 RSFTabsRow-noSelection-550" color="secondary" style={{...}}>
                                    <TabIndicator className="MuiTabs-indicator-568 RSFTabsRow-indicator-549 RSFTabsRow-noSelection-550" color="secondary" style={{...}} classes={{...}}>
                                      <span className="MuiPrivateTabIndicator-root-600 MuiPrivateTabIndicator-colorSecondary-602 MuiTabs-indicator-568 RSFTabsRow-indicator-549 RSFTabsRow-noSelection-550" style={{...}} />
                                    </TabIndicator>
                                  </WithStyles(TabIndicator)>
                                </div>
                              </div>
                            </div>
                          </Tabs>
                        </WithStyles(Tabs)>
                      </TabsRow>
                    </inject-TabsRow-with-app>
                  </WithStyles(inject-TabsRow-with-app)>
                </div>
              </Paper>
            </WithStyles(Paper)>
          </NavTabs>
        </inject-NavTabs>
      </WithStyles(inject-NavTabs)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`NavTabs renders 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-NavTabs)>
        <inject-NavTabs classes={{...}}>
          <NavTabs classes={{...}} tabs={{...}} history={{...}} elevation={2}>
            <WithStyles(Paper) className="RSFNavTabs-root-2" elevation={2}>
              <Paper className="RSFNavTabs-root-2" elevation={2} classes={{...}} component="div" square={false}>
                <div className="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 RSFNavTabs-root-2">
                  <WithStyles(inject-TabsRow-with-app) initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                    <inject-TabsRow-with-app initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                      <TabsRow initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}} app={{...}} variant="scrollable" orientation="horizontal">
                        <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-36 RSFNavTabs-tabs-1" classes={{...}}>
                          <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-36 RSFNavTabs-tabs-1" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                            <div className="MuiTabs-root-44 RSFTabsRow-root-36 RSFNavTabs-tabs-1 RSFTabsRow-root-36 RSFNavTabs-tabs-1" variant="scrollable">
                              <EventListener target="window" onResize={[Function: debounced]} />
                              <div className="MuiTabs-flexContainer-45 RSFTabsRow-centered-42">
                                <div className="MuiTabs-scroller-47 RSFTabsRow-scroller-40 MuiTabs-fixed-48" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                                  <div className="MuiTabs-flexContainer-45 RSFTabsRow-centered-42">
                                    <WithStyles(NavTab) text="Tab 1" url="/1" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} classes={{...}} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={0}>
                                      <NavTab text="Tab 1" url="/1" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <div className="RSFNavTab-tabWrapper-59" onClick={[Function]}>
                                              <WithStyles(inject-Link) state={[Function]} className="RSFNavTab-link-56" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}}>
                                                <inject-Link state={[Function]} className="RSFNavTab-link-56" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                  <Link state={[Function]} className="RSFNavTab-link-56" to="/1" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                    <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="nav" data-moov-link="on" className="RSFLink-root-61 RSFNavTab-link-56" style={[undefined]} onClick={[Function]} href="https://example.com/1">
                                                      <WithStyles(Tab) className="RSFNavTab-root-53 RSFTabsRow-tab-37 RSFNavTabs-tab-5" label="Tab 1" classes={{...}}>
                                                        <Tab className="RSFNavTab-root-53 RSFTabsRow-tab-37 RSFNavTabs-tab-5" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-62 MuiTab-textColorInherit-64 RSFNavTab-root-53 RSFTabsRow-tab-37 RSFNavTabs-tab-5" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                            <ButtonBase focusRipple={true} className="MuiTab-root-62 MuiTab-textColorInherit-64 RSFNavTab-root-53 RSFTabsRow-tab-37 RSFNavTabs-tab-5" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                              <button className="MuiButtonBase-root-74 MuiTab-root-62 MuiTab-textColorInherit-64 RSFNavTab-root-53 RSFTabsRow-tab-37 RSFNavTabs-tab-5" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                                <span className="MuiTab-wrapper-70">
                                                                  <span className="MuiTab-labelContainer-71">
                                                                    <span className="MuiTab-label-72 RSFNavTab-label-55">
                                                                      Tab 1
                                                                    </span>
                                                                  </span>
                                                                </span>
                                                                <NoSsr defer={false} fallback={{...}}>
                                                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                    <TouchRipple center={false} classes={{...}}>
                                                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-77" childFactory={[Function: childFactory]}>
                                                                        <span className="MuiTouchRipple-root-77" />
                                                                      </TransitionGroup>
                                                                    </TouchRipple>
                                                                  </WithStyles(TouchRipple)>
                                                                </NoSsr>
                                                              </button>
                                                            </ButtonBase>
                                                          </WithStyles(ButtonBase)>
                                                        </Tab>
                                                      </WithStyles(Tab)>
                                                    </a>
                                                  </Link>
                                                </inject-Link>
                                              </WithStyles(inject-Link)>
                                            </div>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                    <WithStyles(NavTab) text="Tab 1" url="/2" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} classes={{...}} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={1}>
                                      <NavTab text="Tab 1" url="/2" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch={{...}} loading={false} lazyItemsURL={{...}} expanded={false} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <div className="RSFNavTab-tabWrapper-59" onClick={[Function]}>
                                              <WithStyles(inject-Link) state={[Function]} className="RSFNavTab-link-56" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}}>
                                                <inject-Link state={[Function]} className="RSFNavTab-link-56" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                  <Link state={[Function]} className="RSFNavTab-link-56" to="/2" prefetch={{...}} onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                    <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="nav" data-moov-link="on" className="RSFLink-root-61 RSFNavTab-link-56" style={[undefined]} onClick={[Function]} href="https://example.com/2">
                                                      <WithStyles(Tab) className="RSFNavTab-root-53 RSFTabsRow-tab-37 RSFNavTabs-tab-5" label="Tab 1" classes={{...}}>
                                                        <Tab className="RSFNavTab-root-53 RSFTabsRow-tab-37 RSFNavTabs-tab-5" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-62 MuiTab-textColorInherit-64 RSFNavTab-root-53 RSFTabsRow-tab-37 RSFNavTabs-tab-5" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                            <ButtonBase focusRipple={true} className="MuiTab-root-62 MuiTab-textColorInherit-64 RSFNavTab-root-53 RSFTabsRow-tab-37 RSFNavTabs-tab-5" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                              <button className="MuiButtonBase-root-74 MuiTab-root-62 MuiTab-textColorInherit-64 RSFNavTab-root-53 RSFTabsRow-tab-37 RSFNavTabs-tab-5" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                                <span className="MuiTab-wrapper-70">
                                                                  <span className="MuiTab-labelContainer-71">
                                                                    <span className="MuiTab-label-72 RSFNavTab-label-55">
                                                                      Tab 1
                                                                    </span>
                                                                  </span>
                                                                </span>
                                                                <NoSsr defer={false} fallback={{...}}>
                                                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                    <TouchRipple center={false} classes={{...}}>
                                                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-77" childFactory={[Function: childFactory]}>
                                                                        <span className="MuiTouchRipple-root-77" />
                                                                      </TransitionGroup>
                                                                    </TouchRipple>
                                                                  </WithStyles(TouchRipple)>
                                                                </NoSsr>
                                                              </button>
                                                            </ButtonBase>
                                                          </WithStyles(ButtonBase)>
                                                        </Tab>
                                                      </WithStyles(Tab)>
                                                    </a>
                                                  </Link>
                                                </inject-Link>
                                              </WithStyles(inject-Link)>
                                            </div>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                  </div>
                                  <WithStyles(TabIndicator) className="MuiTabs-indicator-52 RSFTabsRow-indicator-33 RSFTabsRow-noSelection-34" color="secondary" style={{...}}>
                                    <TabIndicator className="MuiTabs-indicator-52 RSFTabsRow-indicator-33 RSFTabsRow-noSelection-34" color="secondary" style={{...}} classes={{...}}>
                                      <span className="MuiPrivateTabIndicator-root-84 MuiPrivateTabIndicator-colorSecondary-86 MuiTabs-indicator-52 RSFTabsRow-indicator-33 RSFTabsRow-noSelection-34" style={{...}} />
                                    </TabIndicator>
                                  </WithStyles(TabIndicator)>
                                </div>
                              </div>
                            </div>
                          </Tabs>
                        </WithStyles(Tabs)>
                      </TabsRow>
                    </inject-TabsRow-with-app>
                  </WithStyles(inject-TabsRow-with-app)>
                </div>
              </Paper>
            </WithStyles(Paper)>
          </NavTabs>
        </inject-NavTabs>
      </WithStyles(inject-NavTabs)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`NavTabs uses prefetch 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-NavTabs)>
        <inject-NavTabs classes={{...}}>
          <NavTabs classes={{...}} tabs={{...}} history={{...}} elevation={2}>
            <WithStyles(Paper) className="RSFNavTabs-root-88" elevation={2}>
              <Paper className="RSFNavTabs-root-88" elevation={2} classes={{...}} component="div" square={false}>
                <div className="MuiPaper-root-92 MuiPaper-elevation2-96 MuiPaper-rounded-93 RSFNavTabs-root-88">
                  <WithStyles(inject-TabsRow-with-app) initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                    <inject-TabsRow-with-app initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}}>
                      <TabsRow initialSelectedIdx={{...}} onTabChange={[Function]} items={{...}} tabRenderer={[Function]} centered={true} classes={{...}} app={{...}} variant="scrollable" orientation="horizontal">
                        <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-122 RSFNavTabs-tabs-87" classes={{...}}>
                          <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-122 RSFNavTabs-tabs-87" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                            <div className="MuiTabs-root-130 RSFTabsRow-root-122 RSFNavTabs-tabs-87 RSFTabsRow-root-122 RSFNavTabs-tabs-87" variant="scrollable">
                              <EventListener target="window" onResize={[Function: debounced]} />
                              <div className="MuiTabs-flexContainer-131 RSFTabsRow-centered-128">
                                <div className="MuiTabs-scroller-133 RSFTabsRow-scroller-126 MuiTabs-fixed-134" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                                  <div className="MuiTabs-flexContainer-131 RSFTabsRow-centered-128">
                                    <WithStyles(NavTab) text="Tab 1" url="/1" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch="always" loading={false} lazyItemsURL={{...}} expanded={false} classes={{...}} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={0}>
                                      <NavTab text="Tab 1" url="/1" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch="always" loading={false} lazyItemsURL={{...}} expanded={false} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <div className="RSFNavTab-tabWrapper-145" onClick={[Function]}>
                                              <WithStyles(inject-Link) state={[Function]} className="RSFNavTab-link-142" to="/1" prefetch="always" onClick={[Function]} anchorProps={{...}}>
                                                <inject-Link state={[Function]} className="RSFNavTab-link-142" to="/1" prefetch="always" onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                  <Link state={[Function]} className="RSFNavTab-link-142" to="/1" prefetch="always" onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                    <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="nav" data-moov-link="on" className="RSFLink-root-147 RSFNavTab-link-142" style={[undefined]} onClick={[Function]} href="https://example.com/1" data-rsf-prefetch="always">
                                                      <WithStyles(Tab) className="RSFNavTab-root-139 RSFTabsRow-tab-123 RSFNavTabs-tab-91" label="Tab 1" classes={{...}}>
                                                        <Tab className="RSFNavTab-root-139 RSFTabsRow-tab-123 RSFNavTabs-tab-91" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                          <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-148 MuiTab-textColorInherit-150 RSFNavTab-root-139 RSFTabsRow-tab-123 RSFNavTabs-tab-91" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                            <ButtonBase focusRipple={true} className="MuiTab-root-148 MuiTab-textColorInherit-150 RSFNavTab-root-139 RSFTabsRow-tab-123 RSFNavTabs-tab-91" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                              <button className="MuiButtonBase-root-160 MuiTab-root-148 MuiTab-textColorInherit-150 RSFNavTab-root-139 RSFTabsRow-tab-123 RSFNavTabs-tab-91" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                                <span className="MuiTab-wrapper-156">
                                                                  <span className="MuiTab-labelContainer-157">
                                                                    <span className="MuiTab-label-158 RSFNavTab-label-141">
                                                                      Tab 1
                                                                    </span>
                                                                  </span>
                                                                </span>
                                                                <NoSsr defer={false} fallback={{...}}>
                                                                  <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                    <TouchRipple center={false} classes={{...}}>
                                                                      <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-163" childFactory={[Function: childFactory]}>
                                                                        <span className="MuiTouchRipple-root-163" />
                                                                      </TransitionGroup>
                                                                    </TouchRipple>
                                                                  </WithStyles(TouchRipple)>
                                                                </NoSsr>
                                                              </button>
                                                            </ButtonBase>
                                                          </WithStyles(ButtonBase)>
                                                        </Tab>
                                                      </WithStyles(Tab)>
                                                    </a>
                                                  </Link>
                                                </inject-Link>
                                              </WithStyles(inject-Link)>
                                            </div>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                    <WithStyles(NavTab) text="Tab 1" url="/2" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch="visible" loading={false} lazyItemsURL={{...}} expanded={false} classes={{...}} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={1}>
                                      <NavTab text="Tab 1" url="/2" state="{"page":"product"}" className={{...}} image={{...}} items={{...}} root={false} server={false} prefetch="visible" loading={false} lazyItemsURL={{...}} expanded={false} item={{...}} selected={false} onMouseEnter={[Function]} onMouseLeave={[Function]} onItemClick={[Function]} onClick={[Function]} fullWidth={false} indicator={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}}>
                                        <inject-Track-with-app event="topNavClicked" item={{...}}>
                                          <Track event="topNavClicked" item={{...}} app={{...}} trigger="onClick" onSuccess={[Function]} ampData={{...}}>
                                            <div className="RSFNavTab-tabWrapper-145" onClick={[Function]}>
                                              <WithStyles(inject-Link) state={[Function]} className="RSFNavTab-link-142" to="/2" prefetch="visible" onClick={[Function]} anchorProps={{...}}>
                                                <inject-Link state={[Function]} className="RSFNavTab-link-142" to="/2" prefetch="visible" onClick={[Function]} anchorProps={{...}} classes={{...}}>
                                                  <Link state={[Function]} className="RSFNavTab-link-142" to="/2" prefetch="visible" onClick={[Function]} anchorProps={{...}} classes={{...}} history={{...}} router={{...}} location={{...}}>
                                                    <VisibilitySensor onChange={[Function]} partialVisibility={true} active={true} minTopValue={0} scrollCheck={false} scrollDelay={250} scrollThrottle={-1} resizeCheck={false} resizeDelay={250} resizeThrottle={-1} intervalCheck={true} intervalDelay={100} delayedCall={false} offset={{...}} containment={{...}}>
                                                      <a onMouseEnter={[Function]} onMouseLeave={[Function]} data-th="nav" data-moov-link="on" className="RSFLink-root-147 RSFNavTab-link-142" style={[undefined]} onClick={[Function]} href="https://example.com/2" data-rsf-prefetch="visible">
                                                        <WithStyles(Tab) className="RSFNavTab-root-139 RSFTabsRow-tab-123 RSFNavTabs-tab-91" label="Tab 1" classes={{...}}>
                                                          <Tab className="RSFNavTab-root-139 RSFTabsRow-tab-123 RSFNavTabs-tab-91" label="Tab 1" classes={{...}} disabled={false} textColor="inherit">
                                                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-148 MuiTab-textColorInherit-150 RSFNavTab-root-139 RSFTabsRow-tab-123 RSFNavTabs-tab-91" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]}>
                                                              <ButtonBase focusRipple={true} className="MuiTab-root-148 MuiTab-textColorInherit-150 RSFNavTab-root-139 RSFTabsRow-tab-123 RSFNavTabs-tab-91" role="tab" aria-selected={[undefined]} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                                                <button className="MuiButtonBase-root-160 MuiTab-root-148 MuiTab-textColorInherit-150 RSFNavTab-root-139 RSFTabsRow-tab-123 RSFNavTabs-tab-91" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={[undefined]} onClick={[Function]}>
                                                                  <span className="MuiTab-wrapper-156">
                                                                    <span className="MuiTab-labelContainer-157">
                                                                      <span className="MuiTab-label-158 RSFNavTab-label-141">
                                                                        Tab 1
                                                                      </span>
                                                                    </span>
                                                                  </span>
                                                                  <NoSsr defer={false} fallback={{...}}>
                                                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                      <TouchRipple center={false} classes={{...}}>
                                                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-163" childFactory={[Function: childFactory]}>
                                                                          <span className="MuiTouchRipple-root-163" />
                                                                        </TransitionGroup>
                                                                      </TouchRipple>
                                                                    </WithStyles(TouchRipple)>
                                                                  </NoSsr>
                                                                </button>
                                                              </ButtonBase>
                                                            </WithStyles(ButtonBase)>
                                                          </Tab>
                                                        </WithStyles(Tab)>
                                                      </a>
                                                    </VisibilitySensor>
                                                  </Link>
                                                </inject-Link>
                                              </WithStyles(inject-Link)>
                                            </div>
                                          </Track>
                                        </inject-Track-with-app>
                                      </NavTab>
                                    </WithStyles(NavTab)>
                                  </div>
                                  <WithStyles(TabIndicator) className="MuiTabs-indicator-138 RSFTabsRow-indicator-119 RSFTabsRow-noSelection-120" color="secondary" style={{...}}>
                                    <TabIndicator className="MuiTabs-indicator-138 RSFTabsRow-indicator-119 RSFTabsRow-noSelection-120" color="secondary" style={{...}} classes={{...}}>
                                      <span className="MuiPrivateTabIndicator-root-170 MuiPrivateTabIndicator-colorSecondary-172 MuiTabs-indicator-138 RSFTabsRow-indicator-119 RSFTabsRow-noSelection-120" style={{...}} />
                                    </TabIndicator>
                                  </WithStyles(TabIndicator)>
                                </div>
                              </div>
                            </div>
                          </Tabs>
                        </WithStyles(Tabs)>
                      </TabsRow>
                    </inject-TabsRow-with-app>
                  </WithStyles(inject-TabsRow-with-app)>
                </div>
              </Paper>
            </WithStyles(Paper)>
          </NavTabs>
        </inject-NavTabs>
      </WithStyles(inject-NavTabs)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;
